--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -265,4 +265,36 @@ img{
         display: flex;
         justify-content: flex-start;
        }
+       @media (max-width:1200px){
+        .f-images img{
+          height: 45vh;
+        }
+        .featured{
+        padding: 0 3%
+       }
+       }
+       @media (max-width:950px){
+        .f-images img{
+          height: 40vh;
+        }
+       }
+       @media (max-width:750px){
+        .f-images{
+          flex-direction: column;
+          align-items: center;
+        }
+         .f-images img{
+          height: 50vh;
+        }
+       }
+        @media (max-width:480px){
+        .f-images img{
+          height: 40vh;
+        }
+      }
+       @media (max-width:350px){
+        .f-images img{
+          height: 30vh;
+        }
+      }
 
