--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -38,7 +38,7 @@
     </div>
                     <!-- featured Collection  -->
     <div class="featured">
-        <p>Featuerd Collections</p>
+        <p class="f-head">Featuerd Collections</p>
         <div class="f-images">
             <div class="img">
                 <img src="../../assets/image/bridal.png">
